--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   </head>
   <body>
     <canvas></canvas>
-    <script src="../src/canvas.js"></script>
+    <script src="js/canvas.js"></script>
   </body>
 </html>
